# TrillbitSDK-ESP32-S3

./: CMakeLists.txt  README.md  esptool_cmd_args.txt  partitions.csv  sdkconfig  sdkconfig.old
components/mtfsk_trill_sdk/: CMakeLists.txt
components/mtfsk_trill_sdk/include/: trill.h  trill_error.h  trill_test.h
main/: CMakeLists.txt  main.c  serial_com.c  storage.c  ui.c
main/include/: app_config.h  serial_com.h  storage.h  ui.h  version.h
scripts/license/: README.md  license_device_script.py  sdk_com_commands.py
spiffs/: README.md
